
Changes with lua-resty-session 1.4                               26 Nov 2014

    *) Bugfix: Fixed an issue where session configurations did get cached
       on a module level. This issue is discussed in pull-request #4:
       https://github.com/bungle/lua-resty-session/pull/4

       Thanks @kipras.

    *) Feature: Added session.new function.

    *) Change: session.start{ ... } (a call with config parameters) works
       now as expected.

    *) Change: session.start now returns additional extra boolean parameter
       that can be used to check if the session is s new session (false) or
       s previously started one (true).

    *) Documentation: Added documentation about Nginx configuration used
       as defaults (not read on every request), and documented session.new.

Changes with lua-resty-session 1.3                               14 Nov 2014

    *) Feature: Added support for persistent sessions. See issue #2.

    *) Feature: Added session.check.ssi, session.cookie.persistent and
       the related Nginx configuration variables.

    *) Feature: Added Max-Age=0 to expiration code.

Changes with lua-resty-session 1.2                               12 Oct 2014

    *) Bugfix: changed encode and decode funtions to operate with corret
       number of arguments. See issue #1.

Changes with lua-resty-session 1.1                                3 Oct 2014

    *) Security: There was a bug where additional user agent, scheme, and
       remote addr (disabled by default) was not checked.

    *) Feature: Added _VERSION field.

    *) Change: Simplied a code a lot (e.g. internal setcookie and getcookie
       functions are now cleaner). Removed a lot of unneccessary lines from
       session.start by adding configs directly to session prototype.

Changes with lua-resty-session 1.0                               24 Sep 2014

    *) Feature: LuaRocks Support via MoonRocks.